updated index and README

--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
     <!-- Styles -->
     <link rel="stylesheet" href="./css/styles.css" />
     <!-- Fonts -->
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap"
+      rel="stylesheet"
+    />
     <title>Meet the Team Section | devChallenges.io</title>
 
     <style>
@@ -41,60 +46,64 @@
         </p>
       </header>
       <!-- cards -->
-        <!-- single card -->
-        <article class="card liam">
-          <img src="./images/person_1.png" alt="Liam" />
-          <img src="./images/Gradient@2x.png" alt="gradient" class="gradient" />
-          <div class="about">
-            <p class="name">Liam Novak</p>
-            <p class="job">Software Engineer</p>
-          </div>
-        </article>
-        <!-- end of single card -->
-        <!-- single card -->
-        <article class="card sophia">
-          <img src="./images/person_2.png" alt="Sophia" class="sophia-img"/>
-          <img src="./images/Gradient@2x.png" alt="gradient" class="gradient sophia-gradient" />
-          <div class="about">
-            <p class="name">Sophia Moretti</p>
-            <p class="job">Business Development Manager</p>
-          </div>
-        </article>
-        <!-- end of single card -->
-        <!-- single card -->
-        <article class="card ethan">
-          <img src="./images/person_3.png" alt="Ethan" />
-          <img src="./images/Gradient@2x.png" alt="gradient" class="gradient" />
-          <div class="about">
-            <p class="name">Ethan Rossi</p>
-            <p class="job">Business Development Manager</p>
-          </div>
-        </article>
-        <!-- end of single card -->
-        <!-- single card -->
-        <article class="card isabella">
-          <img src="./images/person_4.png" alt="Isabella" />
-          <img src="./images/Gradient@2x.png" alt="gradient" class="gradient" />
-          <div class="about">
-            <p class="name">Isabella Ricci</p>
-            <p class="job">UX Designer</p>
-          </div>
-        </article>
-        <!-- end of single card -->
-        <!-- single card -->
-        <article class="card noah">
-          <img src="./images/person_5.png" alt="Noah" class="noah-img" />
-          <img src="./images/Gradient@2x.png" alt="gradient" class="gradient" />
-          <div class="about">
-            <p class="name">Noah Conti</p>
-            <p class="job">Content Creator</p>
-          </div>
-        </article>
-        <!-- end of single card -->
+      <!-- single card -->
+      <article class="card liam">
+        <img src="./images/person_1.png" alt="Liam" />
+        <img src="./images/Gradient@2x.png" alt="gradient" class="gradient" />
+        <div class="about">
+          <p class="name">Liam Novak</p>
+          <p class="job">Software Engineer</p>
+        </div>
+      </article>
+      <!-- end of single card -->
+      <!-- single card -->
+      <article class="card sophia">
+        <img src="./images/person_2.png" alt="Sophia" class="sophia-img" />
+        <img
+          src="./images/Gradient@2x.png"
+          alt="gradient"
+          class="gradient sophia-gradient"
+        />
+        <div class="about">
+          <p class="name">Sophia Moretti</p>
+          <p class="job">Business Development Manager</p>
+        </div>
+      </article>
+      <!-- end of single card -->
+      <!-- single card -->
+      <article class="card ethan">
+        <img src="./images/person_3.png" alt="Ethan" />
+        <img src="./images/Gradient@2x.png" alt="gradient" class="gradient" />
+        <div class="about">
+          <p class="name">Ethan Rossi</p>
+          <p class="job">Business Development Manager</p>
+        </div>
+      </article>
+      <!-- end of single card -->
+      <!-- single card -->
+      <article class="card isabella">
+        <img src="./images/person_4.png" alt="Isabella" />
+        <img src="./images/Gradient@2x.png" alt="gradient" class="gradient" />
+        <div class="about">
+          <p class="name">Isabella Ricci</p>
+          <p class="job">UX Designer</p>
+        </div>
+      </article>
+      <!-- end of single card -->
+      <!-- single card -->
+      <article class="card noah">
+        <img src="./images/person_5.png" alt="Noah" class="noah-img" />
+        <img src="./images/Gradient@2x.png" alt="gradient" class="gradient" />
+        <div class="about">
+          <p class="name">Noah Conti</p>
+          <p class="job">Content Creator</p>
+        </div>
+      </article>
+      <!-- end of single card -->
       <article class="extra">
         <div class="content">
-        <p>See all members </p>
-        <img src="./images/arrow up right.svg" class="arrow" alt="arrow" />
+          <p>See all members</p>
+          <img src="./images/arrow up right.svg" class="arrow" alt="arrow" />
         </div>
       </article>
     </main>
